CRITICAL FIX: Allow frontend/build in git - was blocked by .gitignore causing missing JS files

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ env/
 # Distribution / packaging
 .Python
 build/
+# Exception: Allow frontend build directory for deployment
+!frontend/build/
 develop-eggs/
 dist/
 downloads/
